<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail_event.DetailEventActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detail_event_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_event_media_cover"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/image"
                android:scaleType="fitCenter"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/tv_event_name_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/event_title"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_event_media_cover" />

            <TextView
                android:id="@+id/tv_event_owner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/event_owner_name"
                android:textAlignment="center"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_event_name_detail" />

            <TextView
                android:id="@+id/tv_event_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_summary"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="italic"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_event_owner_name" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_event_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/tv_event_sisa_kuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="8dp"
                android:text="@string/sisa_kuota"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_event_summary" />


            <TextView
                android:id="@+id/tv_event_sisa_kuota_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1337"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/tv_event_sisa_kuota"
                app:layout_constraintEnd_toStartOf="@id/guideline_event_detail"
                app:layout_constraintStart_toEndOf="@id/tv_event_sisa_kuota"
                app:layout_constraintTop_toBottomOf="@id/tv_event_summary"
                app:layout_constraintTop_toTopOf="@id/tv_event_sisa_kuota" />

            <TextView
                android:id="@+id/tv_begin_time_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/event_start"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/tv_event_sisa_kuota_number"
                app:layout_constraintStart_toStartOf="@id/guideline_event_detail"
                app:layout_constraintTop_toTopOf="@id/tv_event_sisa_kuota_number" />

            <TextView
                android:id="@+id/tv_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/lorem_ipsum"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tv_begin_time_event" />

            <Button
                android:id="@+id/btn_event_register"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="36dp"
                android:text="@string/register"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_event_description" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>